<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/tan"
    >
    <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coffee2b"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/coffee_img"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/coffeeChoiceText"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <CheckBox
            android:id="@+id/chocolateBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choco_box"
            android:textAppearance="?android:attr/textAppearanceMedium"

            />
        <CheckBox
            android:id="@+id/creamBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/creme_box"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Quantity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/subtractBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp"
            android:onClick="subractCoffee"
            android:text="@string/subtract"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/quantityNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numText"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp"
            android:onClick="addCoffee"
            android:text="@string/add"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:width="90dp"
        android:height="55dp"
        android:onClick="orderCoffee"
        android:text="@string/orderBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/orderSum"
        android:layout_marginRight="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/orderText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingRight="100dp"/>

</LinearLayout>